k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ionos-ddns
  labels:
    name: ionos-ddns
